[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "Release of one or more crates"
tag-message = "Release version {{version}}"
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/MForster/factorio-rust-tools/compare/{{tag_name}}...HEAD", exactly = 1 },
]
