[package]
name = "factorio-cli"
description = "A command line tool to export prototype definitions from Factorio (http://www.factorio.com)"
version = "0.4.0"

authors = ["Michael Forster <email@michael-forster.de>"]
edition = "2021"
homepage = "http://github.com/MForster/factorio-rust-tools"
repository = "http://github.com/MForster/factorio-rust-tools"
license = "MIT OR Apache-2.0"
keywords = ["gaming", "factorio"]
rust-version = "1.65.0"

[[bin]]
name = "fct"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
config = "0.13.2"
directories = "5.0.0"
eyre = "0.6.8"
factorio-exporter = { version = "0.9.0", path = "../factorio-exporter" }
factorio-mod-api = { version = "0.3.0", path = "../factorio-mod-api" }
indoc = "1.0.7"
itertools = "0.10.5"
rpassword = "7.2.0"
semver = "1.0.14"
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = { version = "1.0.89", features = ["preserve_order"] }
serde_yaml = "0.9.14"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
