[package]
name = "factorio-cli"
description = "A command line tool to export prototype definitions from Factorio (http://www.factorio.com)"
version = "0.4.0"

authors = ["Michael Forster <email@michael-forster.de>"]
edition = "2021"
homepage = "http://github.com/MForster/factorio-rust-tools"
repository = "http://github.com/MForster/factorio-rust-tools"
license = "MIT OR Apache-2.0"
keywords = ["gaming", "factorio"]
rust-version = "1.82.0"

[[bin]]
name = "fct"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
color-eyre = "0.6.2"
config = "0.14.0"
directories = "5.0.1"
eyre = "0.6.12"
factorio-exporter = { version = "0.9.0", path = "../factorio-exporter" }
factorio-mod-api = { version = "0.3.0", path = "../factorio-mod-api" }
indoc = "2.0.4"
itertools = "0.12.1"
rpassword = "7.3.1"
semver = "1.0.21"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde_yaml = "0.9.31"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
