[package]
name = "factorio-exporter"
description = "A library to export prototype definitions from Factorio (http://www.factorio.com)"
version = "0.9.0"

authors = ["Michael Forster <email@michael-forster.de>"]
edition = "2021"
homepage = "http://github.com/MForster/factorio-rust-tools"
repository = "http://github.com/MForster/factorio-rust-tools"
license = "MIT OR Apache-2.0"
keywords = ["gaming", "factorio"]
rust-version = "1.65.0"

[dependencies]
convert_case = "0.6.0"
derive_builder = "0.12.0"
indoc = "1.0.7"
itertools = "0.10.5"
regex = "1.7.0"
regex-macro = "0.2.0"
semver = { version = "1.0.14", features = ["serde"] }
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tempfile = "3.3.0"
thiserror = "1.0.37"
tracing = "0.1.37"
