[package]
name = "factorio-exporter"
description = "A library to export prototype definitions from Factorio (http://www.factorio.com)"
version = "0.9.0"

authors = ["Michael Forster <email@michael-forster.de>"]
edition = "2021"
homepage = "http://github.com/MForster/factorio-rust-tools"
repository = "http://github.com/MForster/factorio-rust-tools"
license = "MIT OR Apache-2.0"
keywords = ["gaming", "factorio"]
rust-version = "1.65.0"

[dependencies]
convert_case = "0.6.0"
derive_builder = "0.13.0"
indoc = "2.0.4"
itertools = "0.12.1"
regex = "1.10.3"
regex-macro = "0.2.0"
semver = { version = "1.0.21", features = ["serde"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tempfile = "3.9.0"
thiserror = "1.0.56"
tracing = "0.1.40"
