[package]
name = "factorio-mod-api"
description = "A library to access the [Factorio](http://www.factorio.com) [mod portal API](https://wiki.factorio.com/Mod_portal_API)."
version = "0.3.0"

authors = ["Michael Forster <email@michael-forster.de>"]
edition = "2021"
homepage = "http://github.com/MForster/factorio-rust-tools"
repository = "http://github.com/MForster/factorio-rust-tools"
license = "MIT OR Apache-2.0"
keywords = ["gaming", "factorio"]
rust-version = "1.65.0"

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.33", default-features = false, features = [
  "std",
  "serde",
] }
elsa = "1.10.0"
futures = "0.3.30"
ordered-float = { version = "4.2.0", features = ["serde"] }
regex-macro = "0.2.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
semver = { version = "1.0.21", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde_json = "1.0.113"
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = "1.0.56"
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
httpmock = "0.7.0"
pretty_assertions = "1.4.0"
tokio = "1.36.0"
